--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'coord': {'lon': -0.1257, 'lat': 51.5085}, 'weather': [{'id': 804, 'main': 'Clouds', 'description': 'overcast clouds', 'icon': '04n'}], 'base': 'stations', 'main': {'temp': 291.6, 'feels_like': 291.51, 'temp_min': 290.96, 'temp_max': 292.21, 'pressure': 1020, 'humidity': 77, 'sea_level': 1020, 'grnd_level': 1015}, 'visibility': 10000, 'wind': {'speed': 6.17, 'deg': 70}, 'clouds': {'all': 100}, 'dt': 1725131060, 'sys': {'type': 2, 'id': 2075535, 'country': 'GB', 'sunrise': 1725081132, 'sunset': 1725130183}, 'timezone': 3600, 'id': 2643743, 'name': 'London', 'cod': 200}\n"
+      "02462c84cfe5f6ab68897c6ab0309fd8\n",
+      "{'coord': {'lon': -0.1257, 'lat': 51.5085}, 'weather': [{'id': 804, 'main': 'Clouds', 'description': 'overcast clouds', 'icon': '04n'}], 'base': 'stations', 'main': {'temp': 291.51, 'feels_like': 291.44, 'temp_min': 290.94, 'temp_max': 292.21, 'pressure': 1020, 'humidity': 78, 'sea_level': 1020, 'grnd_level': 1015}, 'visibility': 10000, 'wind': {'speed': 6.17, 'deg': 70}, 'clouds': {'all': 100}, 'dt': 1725132569, 'sys': {'type': 2, 'id': 2075535, 'country': 'GB', 'sunrise': 1725081132, 'sunset': 1725130183}, 'timezone': 3600, 'id': 2643743, 'name': 'London', 'cod': 200}\n"
      ]
     }
    ],
@@ -22,7 +23,7 @@
     "\n",
     "api_key = os.environ[\"OPENWEATHERMAP_API_KEY\"]\n",
     "\n",
-    "\n",
+    "print(os.environ[\"ODDS_API_KEY\"])\n",
     "# Test API Call\n",
     "url = f\"https://api.openweathermap.org/data/2.5/weather?q=London,uk&APPID={api_key}\"\n",
     "\n",
@@ -61,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
