adding weather functions

--- a/testing.ipynb
+++ b/testing.ipynb
@@ -2,40 +2,394 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from weather.weather import get_weather, convert_weather_to_df\n",
+    "import os\n",
+    "from datetime import datetime\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "future_weather = get_weather('London', os.environ[\"OPENWEATHERMAP_API_KEY\"])\n",
+    "df = convert_weather_to_df(future_weather)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "02462c84cfe5f6ab68897c6ab0309fd8\n",
-      "{'coord': {'lon': -0.1257, 'lat': 51.5085}, 'weather': [{'id': 804, 'main': 'Clouds', 'description': 'overcast clouds', 'icon': '04n'}], 'base': 'stations', 'main': {'temp': 291.51, 'feels_like': 291.44, 'temp_min': 290.94, 'temp_max': 292.21, 'pressure': 1020, 'humidity': 78, 'sea_level': 1020, 'grnd_level': 1015}, 'visibility': 10000, 'wind': {'speed': 6.17, 'deg': 70}, 'clouds': {'all': 100}, 'dt': 1725132569, 'sys': {'type': 2, 'id': 2075535, 'country': 'GB', 'sunrise': 1725081132, 'sunset': 1725130183}, 'timezone': 3600, 'id': 2643743, 'name': 'London', 'cod': 200}\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>Readable Time</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1725321600</td>\n",
+       "      <td>2024-09-02 18:00:00</td>\n",
+       "      <td>66.110</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1725332400</td>\n",
+       "      <td>2024-09-02 21:00:00</td>\n",
+       "      <td>64.976</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1725343200</td>\n",
+       "      <td>2024-09-03 00:00:00</td>\n",
+       "      <td>62.618</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1725354000</td>\n",
+       "      <td>2024-09-03 03:00:00</td>\n",
+       "      <td>69.368</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1725364800</td>\n",
+       "      <td>2024-09-03 06:00:00</td>\n",
+       "      <td>72.626</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1725375600</td>\n",
+       "      <td>2024-09-03 09:00:00</td>\n",
+       "      <td>72.554</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1725386400</td>\n",
+       "      <td>2024-09-03 12:00:00</td>\n",
+       "      <td>67.298</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1725397200</td>\n",
+       "      <td>2024-09-03 15:00:00</td>\n",
+       "      <td>64.202</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1725408000</td>\n",
+       "      <td>2024-09-03 18:00:00</td>\n",
+       "      <td>63.248</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1725418800</td>\n",
+       "      <td>2024-09-03 21:00:00</td>\n",
+       "      <td>59.846</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1725429600</td>\n",
+       "      <td>2024-09-04 00:00:00</td>\n",
+       "      <td>58.226</td>\n",
+       "      <td>few clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>1725440400</td>\n",
+       "      <td>2024-09-04 03:00:00</td>\n",
+       "      <td>63.770</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>1725451200</td>\n",
+       "      <td>2024-09-04 06:00:00</td>\n",
+       "      <td>67.136</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>1725462000</td>\n",
+       "      <td>2024-09-04 09:00:00</td>\n",
+       "      <td>65.876</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>1725472800</td>\n",
+       "      <td>2024-09-04 12:00:00</td>\n",
+       "      <td>62.186</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>1725483600</td>\n",
+       "      <td>2024-09-04 15:00:00</td>\n",
+       "      <td>57.578</td>\n",
+       "      <td>moderate rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>1725494400</td>\n",
+       "      <td>2024-09-04 18:00:00</td>\n",
+       "      <td>56.516</td>\n",
+       "      <td>moderate rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>1725505200</td>\n",
+       "      <td>2024-09-04 21:00:00</td>\n",
+       "      <td>56.570</td>\n",
+       "      <td>moderate rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>1725516000</td>\n",
+       "      <td>2024-09-05 00:00:00</td>\n",
+       "      <td>57.164</td>\n",
+       "      <td>moderate rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>1725526800</td>\n",
+       "      <td>2024-09-05 03:00:00</td>\n",
+       "      <td>59.072</td>\n",
+       "      <td>moderate rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>1725537600</td>\n",
+       "      <td>2024-09-05 06:00:00</td>\n",
+       "      <td>62.852</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>1725548400</td>\n",
+       "      <td>2024-09-05 09:00:00</td>\n",
+       "      <td>67.658</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>1725559200</td>\n",
+       "      <td>2024-09-05 12:00:00</td>\n",
+       "      <td>63.212</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>1725570000</td>\n",
+       "      <td>2024-09-05 15:00:00</td>\n",
+       "      <td>62.024</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>1725580800</td>\n",
+       "      <td>2024-09-05 18:00:00</td>\n",
+       "      <td>60.728</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>1725591600</td>\n",
+       "      <td>2024-09-05 21:00:00</td>\n",
+       "      <td>60.314</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>1725602400</td>\n",
+       "      <td>2024-09-06 00:00:00</td>\n",
+       "      <td>60.566</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>1725613200</td>\n",
+       "      <td>2024-09-06 03:00:00</td>\n",
+       "      <td>62.636</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>1725624000</td>\n",
+       "      <td>2024-09-06 06:00:00</td>\n",
+       "      <td>70.970</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>1725634800</td>\n",
+       "      <td>2024-09-06 09:00:00</td>\n",
+       "      <td>69.926</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>1725645600</td>\n",
+       "      <td>2024-09-06 12:00:00</td>\n",
+       "      <td>67.730</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>1725656400</td>\n",
+       "      <td>2024-09-06 15:00:00</td>\n",
+       "      <td>63.104</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>1725667200</td>\n",
+       "      <td>2024-09-06 18:00:00</td>\n",
+       "      <td>60.566</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>1725678000</td>\n",
+       "      <td>2024-09-06 21:00:00</td>\n",
+       "      <td>59.594</td>\n",
+       "      <td>light rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>1725688800</td>\n",
+       "      <td>2024-09-07 00:00:00</td>\n",
+       "      <td>58.298</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>1725699600</td>\n",
+       "      <td>2024-09-07 03:00:00</td>\n",
+       "      <td>65.102</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>1725710400</td>\n",
+       "      <td>2024-09-07 06:00:00</td>\n",
+       "      <td>72.626</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>1725721200</td>\n",
+       "      <td>2024-09-07 09:00:00</td>\n",
+       "      <td>76.172</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>1725732000</td>\n",
+       "      <td>2024-09-07 12:00:00</td>\n",
+       "      <td>69.728</td>\n",
+       "      <td>broken clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>1725742800</td>\n",
+       "      <td>2024-09-07 15:00:00</td>\n",
+       "      <td>65.228</td>\n",
+       "      <td>clear sky</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Timestamp       Readable Time  Temperature       Description\n",
+       "0   1725321600 2024-09-02 18:00:00       66.110   overcast clouds\n",
+       "1   1725332400 2024-09-02 21:00:00       64.976   overcast clouds\n",
+       "2   1725343200 2024-09-03 00:00:00       62.618   overcast clouds\n",
+       "3   1725354000 2024-09-03 03:00:00       69.368        light rain\n",
+       "4   1725364800 2024-09-03 06:00:00       72.626        light rain\n",
+       "5   1725375600 2024-09-03 09:00:00       72.554        light rain\n",
+       "6   1725386400 2024-09-03 12:00:00       67.298  scattered clouds\n",
+       "7   1725397200 2024-09-03 15:00:00       64.202     broken clouds\n",
+       "8   1725408000 2024-09-03 18:00:00       63.248     broken clouds\n",
+       "9   1725418800 2024-09-03 21:00:00       59.846  scattered clouds\n",
+       "10  1725429600 2024-09-04 00:00:00       58.226        few clouds\n",
+       "11  1725440400 2024-09-04 03:00:00       63.770         clear sky\n",
+       "12  1725451200 2024-09-04 06:00:00       67.136        light rain\n",
+       "13  1725462000 2024-09-04 09:00:00       65.876        light rain\n",
+       "14  1725472800 2024-09-04 12:00:00       62.186        light rain\n",
+       "15  1725483600 2024-09-04 15:00:00       57.578     moderate rain\n",
+       "16  1725494400 2024-09-04 18:00:00       56.516     moderate rain\n",
+       "17  1725505200 2024-09-04 21:00:00       56.570     moderate rain\n",
+       "18  1725516000 2024-09-05 00:00:00       57.164     moderate rain\n",
+       "19  1725526800 2024-09-05 03:00:00       59.072     moderate rain\n",
+       "20  1725537600 2024-09-05 06:00:00       62.852        light rain\n",
+       "21  1725548400 2024-09-05 09:00:00       67.658        light rain\n",
+       "22  1725559200 2024-09-05 12:00:00       63.212        light rain\n",
+       "23  1725570000 2024-09-05 15:00:00       62.024        light rain\n",
+       "24  1725580800 2024-09-05 18:00:00       60.728        light rain\n",
+       "25  1725591600 2024-09-05 21:00:00       60.314        light rain\n",
+       "26  1725602400 2024-09-06 00:00:00       60.566        light rain\n",
+       "27  1725613200 2024-09-06 03:00:00       62.636        light rain\n",
+       "28  1725624000 2024-09-06 06:00:00       70.970   overcast clouds\n",
+       "29  1725634800 2024-09-06 09:00:00       69.926   overcast clouds\n",
+       "30  1725645600 2024-09-06 12:00:00       67.730   overcast clouds\n",
+       "31  1725656400 2024-09-06 15:00:00       63.104        light rain\n",
+       "32  1725667200 2024-09-06 18:00:00       60.566        light rain\n",
+       "33  1725678000 2024-09-06 21:00:00       59.594        light rain\n",
+       "34  1725688800 2024-09-07 00:00:00       58.298     broken clouds\n",
+       "35  1725699600 2024-09-07 03:00:00       65.102         clear sky\n",
+       "36  1725710400 2024-09-07 06:00:00       72.626         clear sky\n",
+       "37  1725721200 2024-09-07 09:00:00       76.172         clear sky\n",
+       "38  1725732000 2024-09-07 12:00:00       69.728     broken clouds\n",
+       "39  1725742800 2024-09-07 15:00:00       65.228         clear sky"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import requests\n",
-    "import time\n",
-    "import os\n",
-    "\n",
-    "\n",
-    "\n",
-    "api_key = os.environ[\"OPENWEATHERMAP_API_KEY\"]\n",
-    "\n",
-    "print(os.environ[\"ODDS_API_KEY\"])\n",
-    "# Test API Call\n",
-    "url = f\"https://api.openweathermap.org/data/2.5/weather?q=London,uk&APPID={api_key}\"\n",
-    "\n",
-    "response = requests.get(url)\n",
-    "\n",
-    "if response.status_code == 200:\n",
-    "\n",
-    "    data = response.json()\n",
-    "\n",
-    "    print(data)\n",
-    "else:\n",
-    "    print(\"Failed to get data:\", response.status_code)"
+    "df"
    ]
   },
   {
@@ -62,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
