--- a/testing.ipynb
+++ b/testing.ipynb
@@ -1,8 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What I need to do still:\n",
+    "- Finish convert_past_weather_to_df to output the median, and std deviation\n",
+    "- Create predict_winner algorithm\n",
+    "    - Takes in odds, get_weather, get_past_weather\n",
+    "    - Finds the game with the biggest difference in z-scores\n",
+    "    - Outputs the game, and the spread, and who you should bet on"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -124,37 +136,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1726099200</td>\n",
-       "      <td>2024-09-11 18:00:00</td>\n",
-       "      <td>78.386</td>\n",
-       "      <td>light rain</td>\n",
+       "      <td>1732147200</td>\n",
+       "      <td>2024-11-20 17:00:00</td>\n",
+       "      <td>48.686</td>\n",
+       "      <td>scattered clouds</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1726110000</td>\n",
-       "      <td>2024-09-11 21:00:00</td>\n",
-       "      <td>74.570</td>\n",
-       "      <td>light rain</td>\n",
+       "      <td>1732158000</td>\n",
+       "      <td>2024-11-20 20:00:00</td>\n",
+       "      <td>46.670</td>\n",
+       "      <td>scattered clouds</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1726120800</td>\n",
-       "      <td>2024-09-12 00:00:00</td>\n",
-       "      <td>71.402</td>\n",
-       "      <td>broken clouds</td>\n",
+       "      <td>1732168800</td>\n",
+       "      <td>2024-11-20 23:00:00</td>\n",
+       "      <td>43.448</td>\n",
+       "      <td>scattered clouds</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Timestamp       Readable Time  Temperature    Description\n",
-       "0  1726099200 2024-09-11 18:00:00       78.386     light rain\n",
-       "1  1726110000 2024-09-11 21:00:00       74.570     light rain\n",
-       "2  1726120800 2024-09-12 00:00:00       71.402  broken clouds"
+       "    Timestamp       Readable Time  Temperature       Description\n",
+       "0  1732147200 2024-11-20 17:00:00       48.686  scattered clouds\n",
+       "1  1732158000 2024-11-20 20:00:00       46.670  scattered clouds\n",
+       "2  1732168800 2024-11-20 23:00:00       43.448  scattered clouds"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +328,7 @@
        "[2 rows x 24 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,11 +336,18 @@
    "source": [
     "new_df.head(2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-analyses-8gNgiJVt-py3.10",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
